# ros2_JOUR1

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/exercices/lib/exercices/: listener  talker
install/exercices/share/exercices/: package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/exercices/include/exercices/exercices/msg/: computer_info.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
ros2_ws/install/exercices/include/exercices/exercices/msg/detail/: computer_info__builder.hpp  computer_info__struct.h  computer_info__traits.hpp  computer_info__type_support.cpp  (+2 more)
ros2_ws/install/exercices/include/exercices/exercices/srv/: control_client.hpp
ros2_ws/install/exercices/lib/exercices/: publisher_ex1  publisher_ex1.py  publisher_ex2  publisher_ex2.py  publisher_ex3  subscriber_ex1  subscriber_ex2  subscriber_ex2.py  subscriber_ex3  subscriber_ex4.py  subscriber_ex5.py
ros2_ws/install/exercices/share/ament_index/resource_index/package_run_dependencies/: exercices
ros2_ws/install/exercices/share/ament_index/resource_index/parent_prefix_path/: exercices
ros2_ws/install/exercices/share/exercices/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/exercices/share/exercices/cmake/: ament_cmake_export_dependencies-extras.cmake  exercices__rosidl_typesupport_cppExport-noconfig.cmake  exercices__rosidl_typesupport_introspection_cppExport-noconfig.cmake  exercices__rosidl_typesupport_introspection_cppExport.cmake  export_exercices__rosidl_generator_cExport-noconfig.cmake  export_exercices__rosidl_generator_cppExport.cmake  export_exercices__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
ros2_ws/log/: latest_build
ros2_ws/src/exercices/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/exercices/exercices/: publisher_ex1.py
ros2_ws/src/exercices/msg/: ComputerInfo.msg
ros2_ws/src/exercices/scripts/: node_client_ex7.py  node_ex6.py  publisher_ex3.py  publisher_ex4.py  service_ex7.py  subscriber_ex1.py  subscriber_ex3.py
ros2_ws/src/exercices/srv/: ControlClient.srv
(+10 files in other folders)
